--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>weatherapp</title>
 </head>
 
-<body>
+<body style="background-color: lightblue">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
